@@ -9,6 +9,7 @@ export(compare_distributions)
 export(conexp)
 export(conlnorm)
 export(conpl)
+export(conweibull)
 export(disexp)
 export(dislnorm)
 export(displ)
@@ -35,6 +36,7 @@ export(rpldis)
 exportClasses(conexp)
 exportClasses(conlnorm)
 exportClasses(conpl)
+exportClasses(conweibull)
 exportClasses(disexp)
 exportClasses(dislnorm)
 exportClasses(displ)
@@ -64,10 +66,12 @@ importFrom(parallel,stopCluster)
 importFrom(stats,dexp)
 importFrom(stats,dlnorm)
 importFrom(stats,dpois)
+importFrom(stats,dweibull)
 importFrom(stats,pexp)
 importFrom(stats,plnorm)
 importFrom(stats,pnorm)
 importFrom(stats,ppois)
+importFrom(stats,pweibull)
 importFrom(stats,qchisq)
 importFrom(stats,qpois)
 importFrom(stats,qt)
