@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
+% Please edit documentation in R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_conweibull.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
 \docType{class}
 \name{conexp-class}
 \alias{conexp}
@@ -8,6 +8,8 @@
 \alias{conlnorm-class}
 \alias{conpl}
 \alias{conpl-class}
+\alias{conweibull}
+\alias{conweibull-class}
 \alias{disexp}
 \alias{disexp-class}
 \alias{dislnorm}
