@@ -1,11 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
+% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_conweibull.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
 \docType{methods}
 \name{dist_cdf}
 \alias{dist_all_cdf,conexo-method}
 \alias{dist_all_cdf,conexp-method}
 \alias{dist_all_cdf,conlnorm-method}
 \alias{dist_all_cdf,conpl-method}
+\alias{dist_all_cdf,conweibull-method}
 \alias{dist_all_cdf,disexp-method}
 \alias{dist_all_cdf,dislnorm-method}
 \alias{dist_all_cdf,displ-method}
@@ -14,6 +15,7 @@
 \alias{dist_cdf,conexp-method}
 \alias{dist_cdf,conlnorm-method}
 \alias{dist_cdf,conpl-method}
+\alias{dist_cdf,conweibull-method}
 \alias{dist_cdf,disexp-method}
 \alias{dist_cdf,dislnorm-method}
 \alias{dist_cdf,displ-method}
@@ -33,6 +35,10 @@ dist_cdf(m, q = NULL, lower_tail = FALSE)
 \S4method{dist_cdf}{conpl}(m, q = NULL, lower_tail = TRUE)
 
 \S4method{dist_all_cdf}{conpl}(m, lower_tail = TRUE, xmax = 1e+05)
+
+\S4method{dist_cdf}{conweibull}(m, q = NULL, lower_tail = TRUE)
+
+\S4method{dist_all_cdf}{conweibull}(m, lower_tail = TRUE, xmax = 1e+05)
 
 \S4method{dist_cdf}{disexp}(m, q = NULL, lower_tail = TRUE)
 
