@@ -1,11 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
+% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_conweibull.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
 \docType{methods}
 \name{dist_ll}
 \alias{dist_ll}
 \alias{dist_ll,conexp-method}
 \alias{dist_ll,conlnorm-method}
 \alias{dist_ll,conpl-method}
+\alias{dist_ll,conweibull-method}
 \alias{dist_ll,disexp-method}
 \alias{dist_ll,dislnorm-method}
 \alias{dist_ll,displ-method}
@@ -19,6 +20,8 @@ dist_ll(m)
 \S4method{dist_ll}{conlnorm}(m)
 
 \S4method{dist_ll}{conpl}(m)
+
+\S4method{dist_ll}{conweibull}(m)
 
 \S4method{dist_ll}{disexp}(m)
 
