@@ -1,11 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
+% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_conweibull.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
 \docType{methods}
 \name{dist_pdf}
 \alias{dist_pdf}
 \alias{dist_pdf,conexp-method}
 \alias{dist_pdf,conlnorm-method}
 \alias{dist_pdf,conpl-method}
+\alias{dist_pdf,conweibull-method}
 \alias{dist_pdf,disexp-method}
 \alias{dist_pdf,dislnorm-method}
 \alias{dist_pdf,displ-method}
@@ -19,6 +20,8 @@ dist_pdf(m, q = NULL, log = FALSE)
 \S4method{dist_pdf}{conlnorm}(m, q = NULL, log = FALSE)
 
 \S4method{dist_pdf}{conpl}(m, q = NULL, log = FALSE)
+
+\S4method{dist_pdf}{conweibull}(m, q = NULL, log = FALSE)
 
 \S4method{dist_pdf}{disexp}(m, q = NULL, log = FALSE)
 
