@@ -1,11 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
+% Please edit documentation in R/AllGenerics.R, R/def_conexp.R, R/def_conlorm.R, R/def_conpl.R, R/def_conweibull.R, R/def_disexp.R, R/def_dislnorm.R, R/def_displ.R, R/def_dispois.R
 \docType{methods}
 \name{dist_rand}
 \alias{dist_rand}
 \alias{dist_rand,conexp-method}
 \alias{dist_rand,conlnorm-method}
 \alias{dist_rand,conpl-method}
+\alias{dist_rand,conweibull-method}
 \alias{dist_rand,disexp-method}
 \alias{dist_rand,dislnorm-method}
 \alias{dist_rand,displ-method}
@@ -19,6 +20,8 @@ dist_rand(m, n)
 \S4method{dist_rand}{conlnorm}(m, n = "numeric")
 
 \S4method{dist_rand}{conpl}(m, n = "numeric")
+
+\S4method{dist_rand}{conweibull}(m, n = "numeric")
 
 \S4method{dist_rand}{disexp}(m, n = "numeric")
 
